--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -11,13 +11,13 @@ platforms:
 - name: centos-7.0
   driver_plugin: digitalocean
   driver_config:
-    size: 512mb
+    size: 1gb
     ssh_key_ids: <%= ENV['DIGITAL_OCEAN_SSH_KEY_IDS'] %>
     ssh_key: <%= ENV['DIGITAL_OCEAN_SSH_KEY_PATH'] %>
 - name: debian-8.1
   driver_plugin: digitalocean
   driver_config:
-    size: 512mb
+    size: 1gb
     ssh_key_ids: <%= ENV['DIGITAL_OCEAN_SSH_KEY_IDS'] %>
     ssh_key: <%= ENV['DIGITAL_OCEAN_SSH_KEY_PATH'] %>
 
